# My-Learning

Algorithms/Jungol/LC_C/01Print/: 101_evaluation1.C  501_print_self-diagnosis1.C  502_print_self-diagnosis2.C  503_print_self-diagnosis3.C  (+8 more)
Algorithms/Leetcode/: README.md
Algorithms/Leetcode/C/: CMakeLists.txt
Algorithms/Leetcode/C/Easy/: 1108. Defanging an IP Address.C  1470. Shuffle the Array.C  1512. Number of Good Pairs.C  1684. Count the Number of Consistent Strings.C  1863. Sum of All Subset XOR Totals.C  1920. Build Array from Permutation.C  1929. Concatenation of Array.C  2011. Final Value of Variable After Performing Operations.C  2469.Convert the Temperature.C  2769. Find the Maximum Achievable Number.C  2894. Divisible and Non-divisible Sums Difference.C  2942. Find Words Containing Character.C  3110. Score of as String.C  3190. Find Minimum Operations to make All Elements Divisible by Three.C  3280. Convert Date to Binary.C  3289. The Two Sneaky Number of Digitville.C  3467. Transform AArray by Parity.C  3498. Reverse Degree of a String.C  3516. Find Closest Person.C  3541. Find Most Frequent Vowel and Consonant.C  3668. Restore Finishing Order.C  3701. Compute Alternating Sum.C  771. Jewels and Stones.C
Algorithms/Leetcode/C/Medium/: 1672. Richest Customer Wealth.C  1769.Minimum Number of Operations to Move All Balls to Each Box.C  1769.Minimum Number of Operations to Move All Balls to Each Box2.C  2044. Count Number of Maximum Bitwise-OR Subsets.C  2161.Partition Array According to Given Pivot.C  2181. Merge Nodes in Between Zeros.C  2807. Insert Greatest Common Divisors in Linked List.C
Engineers-Information-Processing/Subject-1-소프트웨어설계/: Sec001-소프트웨어-생명-주기.md
Implementations/Build-Database/: README.txt  REPL.C
(+230 files in other folders)
