cmake_minimum_required(VERSION 4.0)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable(C
        "Easy/1108. Defanging an IP Address.C"
        "Easy/1470. Shuffle the Array.C"
        "Easy/1512. Number of Good Pairs.C"
        "Easy/1863. Sum of All Subset XOR Totals.C"
        "Easy/1920. Build Array from Permutation.C"
        "Easy/1929. Concatenation of Array.C"
        "Easy/2011. Final Value of Variable After Performing Operations.C"
        "Easy/2469.Convert the Temperature.C"
        "Easy/2769. Find the Maximum Achievable Number.C"
        "Easy/2894. Divisible and Non-divisible Sums Difference.C"
        "Easy/2942. Find Words Containing Character.C"
        "Easy/3110. Score of as String.C"
        "Easy/3190. Find Minimum Operations to make All Elements Divisible by Three.C"
        "Easy/3289. The Two Sneaky Number of Digitville.C"
        "Easy/3467. Transform AArray by Parity.C"
        "Easy/3516. Find Closest Person.C"
        "Easy/3541. Find Most Frequent Vowel and Consonant.C"
        "Easy/3668. Restore Finishing Order.C"
        "Easy/3701. Compute Alternating Sum.C"
        "Easy/771. Jewels and Stones.C"
        "Medium/1672. Richest Customer Wealth.C"
        "Medium/1769.Minimum Number of Operations to Move All Balls to Each Box.C"
        "Medium/1769.Minimum Number of Operations to Move All Balls to Each Box2.C"
        "Medium/2044. Count Number of Maximum Bitwise-OR Subsets.C"
        "Medium/2161.Partition Array According to Given Pivot.C"
        "Medium/2181. Merge Nodes in Between Zeros.C"
        "Medium/2807. Insert Greatest Common Divisors in Linked List.C")
